fixes for scrollbar, in-stream requests confirmations and products list

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -700,6 +700,11 @@ body {
   cursor: pointer;
 }
 
+// fix for checkbox control
+.custom-control-label {
+  cursor: pointer;
+}
+
 // resources list
 .data-list,
 .data-list > * {
